ActiveRecord associations exercise complete

--- a/app/views/toys/show.html.erb
+++ b/app/views/toys/show.html.erb
@@ -5,5 +5,5 @@
 <h3>This toy belongs to...</h3>
 
 <div class="well">
-  <em>Replace this with a link to the cat who owns this toy</em>
+  <em><%= @toy.cat.name %></em>
 </div>
