--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -4,6 +4,8 @@
 
 <h3>This cat's toys are...</h3>
 
+<% @cat.toys.each do |t| %>
 <div class="well">
-  <em>Replace this with a list of the toys that belong to this cat</em>
+  <em><%= t.name %></em>
 </div>
+<% end %>
